2013-10-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/Makefile.core.def: Add osdep/init.c on emu.
	* grub-core/kern/emu/main.c: Add missing include.
	* grub-core/osdep/basic/init.c (grub_util_host_init) [!GRUB_UTIL]:
	Don't call grub_util_init_nls.
	* grub-core/osdep/windows/init.c (grub_util_host_init) [!GRUB_UTIL]:
	Likewise.

2013-10-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/misc.c (grub_util_get_image_size): Use FILE functions rather than
	stat.

2013-10-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-editenv.c: Remove leftover set_program_name and init_nls.

2013-10-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/misc.h: Use gnu_printf only on gcc 4.4 or later.

2013-10-13  Vladimir Serbinenko  <phcoder@gmail.com>

	Add a wrapper for fopen. On unix-like systems just pass-through. On
	windows use unicode version.

2013-10-13  Vladimir Serbinenko  <phcoder@gmail.com>

	Move set_program_name and init_nls to host_init. On windows
	fix in this fuction console and argument charset as well.

2013-10-12  Andrey Borzenkov <arvidjaar@gmail.com>

	Fix inconsistent use of GRUB_CRYPTODISK_ENABLE and
	GRUB_ENABLE_CRYPTODISK.

	* util/grub-install.in: Rename all GRUB_CRYPTODISK_ENABLE to
	GRUB_ENABLE_CRYPTODISK.
	* util/grub-mkconfig_lib.in: Likewise.

2013-10-12  Christian Cier-Zniewski <c.cier@gmx.de>

	* docs/grub.texi (Vendor power-on keys): Add Dell Latitude E4300.

2013-10-12  Melki Christian  <Christian.melki@saabgroup.com>

	* grub-core/term/at_keyboard.c [DEBUG_AT_KEYBOARD]: Fix compilation
	error when enabling debug.

2013-10-12  Ilya Bakulin <Ilya_Bakulin@genua.de>

	* configure.ac: Use -melf_*_obsd on openbsd.

2013-10-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/arm/dl_helper.c: Use more proper %p for pointer.

2013-10-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/misc.h: Use gnu_printf rather than printf as format
	template since our functions are independent of libc.
